--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@ layout: default
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <html>
   <head>
+	  <meta name="google-site-verification" content="-4lgZhRwmxA9kxVl32wK2AEU_RMlHaou25VWVkQAyig" />
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
