--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,9 @@ layout: default
 
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/vaakash/socializer/80391a50/css/socializer.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
- {% raw %}{% seo %}{% endraw %}
- </head>
+ {% seo %}
+
+</head>
  <body>
 	 <center>
      <header class="page-header" role="banner">
