--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@ layout: default
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/vaakash/socializer/80391a50/css/socializer.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
  {% seo %}
+	  {% raw %}
+	  {% endraw %}
 
 </head>
  <body>
